# ray-tracing-the-next-week-in-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs  main32.rs  main4.rs  main6.rs
src/utils/: aabb.rs  bvh.rs  camera.rs  hitable.rs  material.rs  mod.rs  perlin.rs  ray.rs  rect.rs  sphere.rs  texture.rs  vec3.rs
