[package]
name = "ray-tracing-the-next-week"
version = "0.1.0"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]

[dependencies]
rand = "0.3"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main32"
path = "src/main32.rs"

[[bin]]
name = "main4"
path = "src/main4.rs"

[[bin]]
name = "main6"
path = "src/main6.rs"
